--- a/EMEP_Reports.bib
+++ b/EMEP_Reports.bib
@@ -627,6 +627,21 @@ particulate matter within EMEP},
   editor = {K. Barrett and E. Berge}
 }
 
+@techreport{CEIP2020:GNFR,
+  author =        {Bradley Matthews and Robert Wankmueller},
+  institution =   {CEIP umweltbundesamt},
+  number =        {01/2020},
+  type =          {EMEP CEIP Technical report},
+  title =         {{Methodologies applied to the CEIP GNFR gap-filling
+                   2020 Part I: Main Pollutants (NO$_x$ , NMVOCs, SO$_x$
+                   , NH$_3$ , CO), Particulate Matter (PM$_{2.5}$ ,
+                   PM$_{10}$ , PM$_{\mbox{coarse}}$ ) and Black Carbon
+                   (BC) for the years 2000 to 2018}},
+  year =          {2020},
+  url =           {https://www.ceip.at/fileadmin/inhalte/ceip/3_ceip_reports/
+                  main_pm_bc_gap-filling_documentation_2020.pdf},
+}
+
 @BOOK{R2020,
    author = {{EMEP Status Report 1/2020}},
    title = {{Transboundary particulate matter, photo-oxidants, acidifying and eutrophying components}},
