--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -213,9 +213,9 @@ Such emission sectors are characterised in the model by
 release heights, timefactors and species-splits (e.g. NOx to NO and
 \ce{NO2}, or NMVOC to individual VOC surrogates) for each sector.
 
-able~\ref{tab:GNFRsectors} summarises the new GNFR\_CAMS sectors,
+Table~\ref{tab:GNFRsectors} summarises the new GNFR\_CAMS sectors,
 and the mapping indices used.
-\COMMENT{Add index explanation in SI table?}
+%\COMMENT{Add index explanation in SI table?}
 
 
 \begin{table}
