--- a/report.tex
+++ b/report.tex
@@ -359,7 +359,7 @@
 %\include{chapterTrendsOCandSIA} %Karl-Espen, David
 
 \part{Technical EMEP Developments}
-%\include{chapterEMEPModelUpdates}
+\include{chapterEMEPModelUpdates}
 %\include{chapterMeasurementDevelopments}
 
 \part{Appendices}
