--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1,4 +1,4 @@
-\chapter[Trends]{Trends in observation and EMEP MSC-W model calculations 2000-2019}
+\chapter[Trends]{Trends in observations and EMEP MSC-W model calculations 2000-2019}
 \label{ch:Trends}
 
 {\bf{Authors}}\\
@@ -371,7 +371,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 \section{\label{sec:Trends_PM }Trends in \PM[10] and \PM[2.5] }
 
-Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal trends in \PM[10]  and \PM[2.5] from 2000 to 2019
+Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal trends in \PM[10] and \PM[2.5] from 2000 to 2019. Tables \ref{tab:pm10_stat} and \ref{tab:pm25_stat} provide further quantitative information regarding observed and modelled trends, i.e. the number of sites considered and those with significant trends, values of average absolute and relative trends (including confidence intervals) for the 2000-2019 period, for 2000-2010 and 2010-2019 sub-periods, and also for the 2005-2019 period.
 
 
 \begin{figure}
@@ -379,6 +379,12 @@ Figure~\ref{fig:pm_trends} shows an overview of the annual and seasonal trends i
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/PM_trends.png}
 	\caption{\label{fig:pm_trends}Trends in \PM[10]  and \PM[2.5] from 2010-2019 for EMEP observations and model.}
 \end{figure}
+
+
+Overall, the model calculates significant PM trends at more sites 
+In the period 2000-2019 for \PM[10] , 41 31 39 sites -0.35  -0.27 \ug $yr^{-1})$  -1.79  -1.95 \% $yr^{-1})$
+
+For \PM[2.5] 20 16 20 sites -0.29  -0.25 ug $yr^{-1})$ -2.34  -2.52  \% $yr^{-1})$
 
 
 
