Adding soil-related shorthands

--- a/report.tex
+++ b/report.tex
@@ -155,6 +155,18 @@
 \newcommand{\nhiv}{\ce{NH4}\xspace}
 \newcommand{\noiii}{\ce{NO3-}\xspace}
 
+% Soil NO, August 2021
+\newcommand{\ngN}{\ensuremath{\mbox{ng(N)~m}^{-2}\mbox{s}^{-1}}\xspace}
+\newcommand{\Ndep}{\ensuremath{\mbox{N}_{Dep}}\xspace}
+\newcommand{\Nfert}{\ensuremath{\mbox{N}_{Fert}}\xspace}
+\newcommand{\Fs}{\ensuremath{\mbox{F}_{\scriptsize \mbox{soil}}}\xspace}
+\newcommand{\Fb}{\ensuremath{\mbox{F}_{\scriptsize \mbox{biome}}}\xspace}
+\newcommand{\Fd}{\ensuremath{\mbox{F}_{\scriptsize \mbox{Ndep}}}\xspace}
+\newcommand{\Ff}{\ensuremath{\mbox{F}_{\scriptsize \mbox{Fert}}}\xspace}
+\newcommand{\Fn}{\ensuremath{\mbox{F}_{\scriptsize \mbox{nonFert}}}\xspace}
+\newcommand{\Fp}{\ensuremath{\mbox{F}_{\scriptsize \mbox{pulse}}}\xspace}
+
+
 %
 % Some new AOT40 defs:
 \newcommand{\aotobs}{\ensuremath{\mbox{AOT40}^{\mbox{\footnotesize 3m} }}}
@@ -238,6 +250,7 @@
 \newcommand{\sqkm}{km$^2$\,}
 \newcommand{\cmprs}{cm$^{-1}$\,}
 \newcommand{\degrees}{\ensuremath{^\circ}}
+\newcommand{\ResEq}[1]{{{#1}\degrees}$\times${{#1}\degrees}} % for eg 0.1x0.1
 \newcommand{\ugXmc}[1]{\ce{$\mu$g({#1})~m$^{-3}$}}
 \newcommand{\ugXmq}[1]{\ce{$\mu$g({#1})~m$^{-2}$}}
 \newcommand{\ugXlt}[1]{\ce{$\mu$g({#1})~l$^{-1}$}}
