--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -263,11 +263,49 @@ F4 &    19 &   7 &  2 &  19 &  Road Transport - NonExhaust Other& 7   \\
 
 \COMMENT{MICHAEL to COMPLETE}
 
+A new method to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} ad has been used for this year's status run. 
+
+calculated 
+
+Using the sea surface DMS concentrations from \citet{Lana2011}, the fluxes of DMS from the water into the atmosphere can are  calculated online based on the meteorological data driving the EMEP model.
+
+ and
+calculates the Schmidt number ($Sc$) from the sea surface temperature ($SST$, given in \textdegree C) as
+\\
+calculates $Sc$ with the formula of \citet{Wanninkhof2014} and $K_{w}$ :
+\\
+\\
+$Sc=2855.7 -177.63\  SST + 6.0438\  SST^2 - 0.11645\  SST^3 + 0.00094743\ SST^4$ 
+
+The transfer velocity $K_{w}$ (given in cm hour$^{-1}$) is calculated with the formula of \citet{Nightingale2000}, depending on the 10-meter wind speed $u_{10}$ (given in \ms):
+\\
+$K_w=(0.222\  u_{10}^2 +0.333\ u_{10}) \sqrt{\frac{600}{Sc}} $\\
+
+
+Following \citet{Tarrason:1995} we assume that 66\% of the DMS in air is converted into \ce{SO2}; the DMS emission is thus implemented in the model as an \ce{SO2} flux as:
+
+\begin{verbatim}
+flux(SO2)=0.66*O_DMS*Kw/3600*0.01*GRAV*roa/p*AVOG  
+\end{verbatim}
+
+where $O\_DMS$ is the sea surface DMS concentration (in nanomol L$^{-1}$),
+$GRAV$ is standard gravity (9.807 m s$^{-2}$),
+$roa$ is the ambient density of air (kg m$^{-3}$),
+$p$ is ambient air pressure
+and $AVOG$ is Avogradro's number (6.023e+23 mol$^{-1}$).
+
 \subsection{Aircraft emissions}
 \label{ssec:Aircraft}
 
 \COMMENT{MICHAEL to COMPLETE}
 
+LTO (landing/take-off) emission data are, as before, taken from CEIP, i.e. based on aircraft emissions officially reported by countries for up to 3000 feet above the surface. However, aircraft emissions at higher altitudes are now based on the new CAMS-GLOB-AIR dataset (\citet{GranierCAMS2019}), given separately for all years from 2000 to 2019, with monthly variation and a spatial resolution of 0.5$^\circ$\,$\times$\,0.5$^\circ$\,$\times$\,610\,m. These data have been provided through the Copernicus Atmosphere Monitoring Service and can be downloaded from the Atmosphere Data Store of ECMWF (\url{https://ads.atmosphere.copernicus.eu/}).
+
+We assume that, in approximation, half of the LTO emissions (from CEIP) occur below 50 meters above the surface, while the other half is evenly distributed over the height range between 50 meters and about 3000 feet.
+
+In the EMEP model, CAMS-GLOB-AIR emissions between 0 and 610m (2000 ft) above the surface are not used, and half of the CAMS-GLOB-AIR emissions between 610 and 1220m are evenly distributed over the model layers corresponding to that height range. The assumption is that emissions up to 3000 feet should already be fully included in the CEIP (LTO) emissions. Above 1220m (4000ft), CAMS-GLOB-AIR emissions are used in full, and interpolated to the relevant model grid during model runtime.
+
+The option of using the old QUANTIFY data (website \url{www.pa.op.dlr.de/quantify}) instead of CAMS-GLOB-AIR is still available.
 
 \subsection{Revised fine/coarse splits of sea-salt emissions}
 \label{ssec:updateSS}
