--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -263,9 +263,7 @@ F4 &    19 &   7 &  2 &  19 &  Road Transport - NonExhaust Other& 7   \\
 
 \COMMENT{MICHAEL to COMPLETE}
 
-A new method to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} ad has been used for this year's status run. 
-
-calculated 
+A new method to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and has been used for this year's status run. 
 
 Using the sea surface DMS concentrations from \citet{Lana2011}, the fluxes of DMS from the water into the atmosphere can are  calculated online based on the meteorological data driving the EMEP model.
 
