Update on Overleaf.

--- a/chapterEMEPModelUpdates.tex
+++ b/chapterEMEPModelUpdates.tex
@@ -263,9 +263,9 @@ F4 &    19 &   7 &  2 &  19 &  Road Transport - NonExhaust Other& 7   \\
 
 \COMMENT{MICHAEL to COMPLETE}
 
-A new method to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and has been used for this year's status run. 
+A new method to calculate biogenic emissions of dimethyl sulphide (DMS) has been added to the EMEP model. It is based on the climatology of sea surface DMS concentrations published by \citet{Lana2011} and the meteorological data driving the EMEP model, and it has been used for this year's status run. 
 
-Using the sea surface DMS concentrations from \citet{Lana2011}, the fluxes of DMS from the water into the atmosphere are calculated online based on the meteorological data driving the EMEP model.
+Using the sea surface DMS concentrations from \citet{Lana2011}, the fluxes of DMS from the water into the atmosphere are calculated online based on .
 
  and
 calculates the Schmidt number ($Sc$) from the sea surface temperature ($SST$, given in \textdegree C) as
